<resources>
    <string name="app_name">SellerBuyerApp</string>
    <string name="todo">TODO</string>
    <string name="find_discover_choose_and_buy_anything_online">Find ,Discover ,Choose and Buy anything online.</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="todo1">TODO</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_me">Remember me</string>
    <string name="i_m_not_an_admin">I\'m not an admin</string>
    <string name="i_m_an_admin">I\'m an admin?</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="add_new_product">Add New Product</string>
    <string name="todo4">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">Product Price...</string>
    <string name="product_description">Product Description...</string>
    <string name="product_name">Product Name...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="appbar_scrolling_view_behavior">ScrollBar</string>
    <string name="cart">Cart</string>
    <string name="communicate">Communicate</string>
    <string name="orders">Orders</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_name">user name</string>
</resources>
